Fix bug at peer exchange.
numMinSuccess is 1, if we got at least 1 peer exchange we stopped, but we did not set initialPeerExchangeCompleted to true. Calls to extendPeergroup got ignored then. Also we did not call the further peer exchange attempts.